<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Home">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/shrikhand"
        android:text="@string/breakdown"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="56dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="395dp"
        android:layout_height="85dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button22"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#C92993"
                android:layout_marginEnd="6dp"
                android:text="@string/garages"
                android:background="@drawable/button_style"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button23"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#C92993"
                android:background="@drawable/button_style"
                android:layout_marginEnd="6dp"
                android:text="@string/petrol"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button24"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#C92993"
                android:text="@string/mechanic"
                android:background="@drawable/button_style"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button27"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#C92993"
        android:text="@string/emergancy"
        android:background="@drawable/button_style"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="423dp"
        android:layout_height="569dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

</androidx.constraintlayout.widget.ConstraintLayout>